RESOLVED FIXED180585
Service Worker should use a correct SessionID
https://bugs.webkit.org/show_bug.cgi?id=180585
Summary Service Worker should use a correct SessionID
youenn fablet
Reported 2017-12-08 08:35:32 PST
Currently it is using a default one.
Attachments
Patch (17.70 KB, patch)
2017-12-08 10:24 PST, youenn fablet
no flags
Patch (17.39 KB, patch)
2017-12-08 10:34 PST, youenn fablet
no flags
Patch (17.20 KB, patch)
2017-12-08 12:29 PST, youenn fablet
no flags
Patch (17.21 KB, patch)
2017-12-08 13:07 PST, youenn fablet
no flags
youenn fablet
Comment 1 2017-12-08 10:24:43 PST
youenn fablet
Comment 2 2017-12-08 10:34:32 PST
youenn fablet
Comment 3 2017-12-08 12:29:54 PST
youenn fablet
Comment 4 2017-12-08 13:07:09 PST
EWS Watchlist
Comment 5 2017-12-08 13:09:13 PST
Attachment 328858 [details] did not pass style-queue: ERROR: Source/WebCore/workers/service/server/SWServer.cpp:200: Code inside a namespace should not be indented. [whitespace/indent] [4] ERROR: Source/WebCore/workers/service/server/SWServer.cpp:202: Wrong number of spaces before statement. (expected: 8) [whitespace/indent] [4] ERROR: Source/WebCore/workers/service/server/SWServer.cpp:203: Wrong number of spaces before statement. (expected: 8) [whitespace/indent] [4] Total errors found: 3 in 15 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Commit Bot
Comment 6 2017-12-08 14:44:30 PST
Comment on attachment 328858 [details] Patch Clearing flags on attachment: 328858 Committed r225703: <https://trac.webkit.org/changeset/225703>
WebKit Commit Bot
Comment 7 2017-12-08 14:44:32 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 8 2017-12-08 14:45:36 PST
Note You need to log in before you can comment on or make changes to this bug.