Service Worker should use a correct SessionID https://bugs.webkit.org/show_bug.cgi?id=180585

Patch by Youenn Fablet <youenn@apple.com> on 2017-12-08
Reviewed by Alex Christensen.

Source/WebCore:

Test: http/tests/workers/service/serviceworker-private-browsing.https.html

Store SessionID in SWServer and send it as part of service worker instantiation.

* workers/service/server/SWServer.cpp:
(WebCore::SWServer::SWServer):
(WebCore::SWServer::installContextData):
(WebCore::SWServer::runServiceWorker):
* workers/service/server/SWServer.h:
* workers/service/server/SWServerToContextConnection.h:

Source/WebKit:

Store SessionID in SWServer and send it as part of service worker instantiation.
Use it when creating service worker thread in service worker process.

* StorageProcess/ServiceWorker/WebSWServerToContextConnection.cpp:
(WebKit::WebSWServerToContextConnection::installServiceWorkerContext):
* StorageProcess/ServiceWorker/WebSWServerToContextConnection.h:
* StorageProcess/StorageProcess.cpp:
(WebKit::StorageProcess::swServerForSession):
* WebProcess/Storage/WebSWContextManagerConnection.cpp:
(WebKit::WebSWContextManagerConnection::installServiceWorker):
* WebProcess/Storage/WebSWContextManagerConnection.h:
* WebProcess/Storage/WebSWContextManagerConnection.messages.in:

LayoutTests:

* http/tests/workers/service/serviceworker-private-browsing-worker.js: Added.
(async):
* http/tests/workers/service/serviceworker-private-browsing.https-expected.txt: Added.
* http/tests/workers/service/serviceworker-private-browsing.https.html: Added.

Canonical link: https://commits.webkit.org/196519@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@225703 268f45cc-cd09-0410-ab3c-d52691b4dbfc