Source/WebCore/workers/service/server/SWServerToContextConnection.h
@@ -32,6 +32,10 @@
 #include "ServiceWorkerTypes.h"
 #include <wtf/RefCounted.h>
 
+namespace PAL {
+class SessionID;
+}
+
 namespace WebCore {
 
 class SWServer;
@@ -48,7 +52,7 @@ public:
     SWServerToContextConnectionIdentifier identifier() const { return m_identifier; }
 
     // Messages to the SW host process
-    virtual void installServiceWorkerContext(const ServiceWorkerContextData&) = 0;
+    virtual void installServiceWorkerContext(const ServiceWorkerContextData&, PAL::SessionID) = 0;
     virtual void fireInstallEvent(ServiceWorkerIdentifier) = 0;
     virtual void fireActivateEvent(ServiceWorkerIdentifier) = 0;
     virtual void terminateWorker(ServiceWorkerIdentifier) = 0;
